<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:fillViewport="true"
    android:background="@color/backgroundColor"
    tools:context=".LoginActivity">

<androidx.constraintlayout.widget.ConstraintLayout
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:paddingBottom="@dimen/spacing_xxlarge">

    <ImageView
        android:id="@+id/imageView3"
        android:layout_width="100dp"
        android:layout_height="100dp"
        android:layout_marginTop="@dimen/spacing_xlarge"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:srcCompat="@drawable/splash_screen_logo" />

    <TextView
        android:id="@+id/textView6"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/spacing_medium"
        android:fontFamily="@font/cabalbold"
        android:text="@string/hungers_den1"
        android:textAlignment="center"
        android:textColor="@color/textPrimary"
        android:textSize="@dimen/text_size_headline"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="@+id/imageView3"
        app:layout_constraintStart_toStartOf="@+id/imageView3"
        app:layout_constraintTop_toBottomOf="@+id/imageView3" />

    <TextView
        android:id="@+id/textView7"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/spacing_small"
        android:fontFamily="@font/cabalbold"
        android:text="@string/deliver_favourite_food"
        android:textAlignment="center"
        android:textColor="@color/textColor"
        android:textSize="@dimen/text_size_medium"
        app:layout_constraintEnd_toEndOf="@+id/textView6"
        app:layout_constraintStart_toStartOf="@+id/textView6"
        app:layout_constraintTop_toBottomOf="@+id/textView6" />

    <TextView
        android:id="@+id/textView8"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/spacing_small"
        android:fontFamily="@font/cabalbold"
        android:text="@string/login_to_your_account"
        android:textAlignment="center"
        android:textColor="@color/textColor"
        android:textSize="@dimen/text_size_xlarge"
        app:layout_constraintEnd_toEndOf="@+id/textView7"
        app:layout_constraintStart_toStartOf="@+id/textView7"
        app:layout_constraintTop_toBottomOf="@+id/textView7" />

    <EditText
        android:id="@+id/emailAddress"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:minHeight="@dimen/button_height"
        android:layout_marginStart="@dimen/spacing_xlarge"
        android:layout_marginEnd="@dimen/spacing_xlarge"
        android:layout_marginTop="@dimen/spacing_large"
        android:background="@drawable/edittextshape"
        android:drawableStart="@drawable/email_icon"
        android:drawablePadding="@dimen/spacing_medium"
        android:elevation="@dimen/elevation_small"
        android:ems="10"
        android:fontFamily="@font/lato"
        android:hint="@string/email"
        android:inputType="textEmailAddress"
        android:padding="@dimen/spacing_medium"
        android:textColor="@color/textPrimary"
        android:textColorHint="@color/textHint"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView8" />

    <EditText
        android:id="@+id/passwordEdt"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:minHeight="@dimen/button_height"
        android:layout_marginStart="@dimen/spacing_xlarge"
        android:layout_marginEnd="@dimen/spacing_xlarge"
        android:layout_marginTop="@dimen/spacing_medium"
        android:background="@drawable/edittextshape"
        android:drawableStart="@drawable/password_icon"
        android:drawablePadding="@dimen/spacing_medium"
        android:elevation="@dimen/elevation_small"
        android:ems="10"
        android:maxLength="8"
        android:fontFamily="@font/lato"
        android:hint="@string/password"
        android:inputType="textPassword"
        android:padding="@dimen/spacing_medium"
        android:textColor="@color/textPrimary"
        android:textColorHint="@color/textHint"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/emailAddress" />

    <TextView
        android:id="@+id/textView10"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/spacing_medium"
        android:fontFamily="@font/lato_bold"
        android:text="@string/or"
        android:textAlignment="center"
        android:textColor="@color/textPrimary"
        android:textSize="@dimen/text_size_normal"
        android:textStyle="italic"
        app:layout_constraintEnd_toEndOf="@+id/passwordEdt"
        app:layout_constraintStart_toStartOf="@+id/passwordEdt"
        app:layout_constraintTop_toBottomOf="@+id/passwordEdt" />

    <TextView
        android:id="@+id/textView11"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/spacing_small"
        android:fontFamily="@font/cabalbold"
        android:text="@string/continue_with"
        android:textAlignment="center"
        android:textColor="@color/textColor"
        android:textSize="@dimen/text_size_xlarge"
        app:layout_constraintEnd_toEndOf="@+id/textView10"
        app:layout_constraintStart_toStartOf="@+id/textView10"
        app:layout_constraintTop_toBottomOf="@+id/textView10" />

    <androidx.appcompat.widget.AppCompatButton
        android:id="@+id/googleButton"
        android:layout_width="0dp"
        android:layout_height="@dimen/button_height"
        android:layout_marginTop="@dimen/spacing_medium"
        android:layout_marginStart="@dimen/spacing_xlarge"
        android:layout_marginEnd="@dimen/spacing_small"
        android:background="@drawable/whitebutton"
        android:fontFamily="@font/lato_bold"
        android:paddingLeft="@dimen/spacing_medium"
        android:text="@string/google"
        android:textAllCaps="false"
        android:textSize="@dimen/text_size_medium"
        app:layout_constraintEnd_toStartOf="@+id/facebookButton"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView11" />

    <androidx.appcompat.widget.AppCompatButton
        android:id="@+id/facebookButton"
        android:layout_width="0dp"
        android:layout_height="@dimen/button_height"
        android:layout_marginTop="@dimen/spacing_medium"
        android:layout_marginStart="@dimen/spacing_small"
        android:layout_marginEnd="@dimen/spacing_xlarge"
        android:background="@drawable/whitebutton"
        android:fontFamily="@font/lato_bold"
        android:paddingLeft="@dimen/spacing_medium"
        android:text="@string/facebook"
        android:textAllCaps="false"
        android:textSize="@dimen/text_size_medium"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@+id/googleButton"
        app:layout_constraintTop_toBottomOf="@+id/textView11" />

    <androidx.appcompat.widget.AppCompatButton
        android:id="@+id/loginButton"
        android:layout_width="0dp"
        android:layout_height="@dimen/button_height_large"
        android:layout_marginStart="@dimen/spacing_xlarge"
        android:layout_marginEnd="@dimen/spacing_xlarge"
        android:layout_marginTop="@dimen/spacing_medium"
        android:background="@drawable/orangebuttongradient"
        android:fontFamily="@font/cabalbold"
        android:text="@string/login"
        android:textAllCaps="false"
        android:textColor="@color/white"
        android:textSize="@dimen/text_size_large"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/googleButton" />

    <TextView
        android:id="@+id/donthavebutton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/spacing_medium"
        android:fontFamily="@font/lato_bold"
        android:text="@string/don_t_have_account"
        android:textAlignment="center"
        android:textColor="@color/textPrimary"
        android:textSize="@dimen/text_size_normal"
        android:textStyle="italic"
        app:layout_constraintEnd_toEndOf="@+id/loginButton"
        app:layout_constraintStart_toStartOf="@+id/loginButton"
        app:layout_constraintTop_toBottomOf="@+id/loginButton" />

    <TextView
        android:id="@+id/textView13"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/spacing_medium"
        android:fontFamily="@font/cabalbold"
        android:text="@string/designed_by_nsourashis_das"
        android:textAlignment="center"
        android:textColor="@color/textColor"
        android:textSize="@dimen/text_size_medium"
        android:textStyle="italic"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/donthavebutton" />

</androidx.constraintlayout.widget.ConstraintLayout>
</ScrollView>
