<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:background="@color/white"
    android:layout_width="match_parent"
    android:layout_height="wrap_content">

    <androidx.cardview.widget.CardView
        android:layout_width="360dp"
        android:layout_height="87dp"
        android:layout_marginTop="8dp"
        android:layout_marginBottom="8dp"
        app:cardCornerRadius="22dp"
        app:cardElevation="4dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:elevation="6dp">

            <TextView
                android:id="@+id/foodNamePopular"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="16dp"
                android:fontFamily="@font/cabalbold"
                android:text="@string/food_name"
                android:textColor="@color/black"
                android:textSize="16sp"
                app:layout_constraintBottom_toBottomOf="@+id/foodImages"
                app:layout_constraintStart_toEndOf="@+id/foodImages"
                app:layout_constraintTop_toTopOf="@+id/foodImages" />

            <TextView
                android:id="@+id/addToCartPopular"
                android:layout_width="100dp"
                android:layout_height="20dp"
                android:layout_marginTop="16dp"
                android:background="@drawable/addtocartshape"
                android:fontFamily="@font/cabalbold"
                android:gravity="center"
                android:text="@string/add_to_cart"
                android:textColor="@color/white"
                app:layout_constraintEnd_toEndOf="@+id/pricePopular"
                app:layout_constraintHorizontal_bias="0.489"
                app:layout_constraintStart_toStartOf="@+id/pricePopular"
                app:layout_constraintTop_toBottomOf="@+id/pricePopular" />

            <TextView
                android:id="@+id/pricePopular"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="16dp"
                android:fontFamily="@font/cabalbold"
                android:text="@string/_150"
                android:textColor="@color/textColor"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="0.797"
                app:layout_constraintStart_toEndOf="@+id/foodImages"
                app:layout_constraintTop_toTopOf="parent" />

            <ImageView
                android:id="@+id/foodImages"
                android:layout_width="64dp"
                android:layout_height="64dp"
                android:layout_marginStart="8dp"
                android:scaleType="centerCrop"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                tools:srcCompat="@tools:sample/avatars" />
        </androidx.constraintlayout.widget.ConstraintLayout>
    </androidx.cardview.widget.CardView>
</androidx.constraintlayout.widget.ConstraintLayout>